EO: manage multi-extract/insert
a([2 8 4] now works for arrays and lists.

Change-Id: I4bddf0e3ec2664e933ec36fa763096f1e0e6a9ad